--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:background="@color/red_200"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:elevation="2dp">
 
         <TextView
             android:id="@+id/away_textview"
@@ -19,9 +21,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:text="Away"
-            android:textStyle="bold"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            style="@style/scoreboardHeader"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"/>
 
@@ -32,9 +32,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@id/away_textview"
             android:text="Home"
-            android:textStyle="bold"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp" />
+            style="@style/scoreboardHeader" />
 
         <include layout="@layout/inning"
             android:id="@+id/away_include"
@@ -54,7 +52,6 @@
             android:layout_alignTop="@id/home_textview" />
 
         <include layout="@layout/inning_header"
-            style="@style/inningHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignStart="@id/away_include"
@@ -65,6 +62,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4" />
+        android:layout_weight="4">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:text="Current Inning" />
+    </RelativeLayout>
 
 </LinearLayout>
