--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="1dp"
+    android:clipToPadding="false"
+    android:background="@color/grey_200" >
 
     <RelativeLayout
-        android:background="@color/red_200"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:elevation="2dp">
+        android:elevation="4dp">
 
         <TextView
             android:id="@+id/away_textview"
@@ -23,7 +26,8 @@
             android:text="Away"
             style="@style/scoreboardHeader"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"/>
 
         <TextView
             android:id="@+id/home_textview"
@@ -32,44 +36,113 @@
             android:layout_alignParentStart="true"
             android:layout_below="@id/away_textview"
             android:text="Home"
-            style="@style/scoreboardHeader" />
+            style="@style/scoreboardHeader"
+            android:layout_marginStart="16dp"/>
 
-        <include layout="@layout/inning"
-            android:id="@+id/away_include"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/inning_top_recyclerview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/away_textview"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@id/away_textview"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginStart="16dp"
+            android:overScrollMode="never"/>
 
-        <include layout="@layout/inning"
-            android:id="@+id/home_include"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/inning_bottom_recyclerview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/away_include"
-            android:layout_alignEnd="@id/away_include"
-            android:layout_alignTop="@id/home_textview" />
+            android:layout_alignStart="@id/inning_top_recyclerview"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@id/home_textview"
+            android:overScrollMode="never"/>
 
-        <include layout="@layout/inning_header"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/header_recyclerview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/away_include"
-            android:layout_alignEnd="@id/away_include"
-            android:layout_above="@id/away_textview" />
+            android:layout_alignStart="@id/inning_top_recyclerview"
+            android:layout_alignParentEnd="true"
+            android:layout_above="@id/away_textview"
+            android:overScrollMode="never"/>
+
+        <ImageView
+            android:id="@+id/logo_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/away_textview"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/header_recyclerview"
+            android:src="@drawable/mlb"
+            android:layout_marginEnd="4dp"
+            android:layout_marginTop="4dp"/>
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="0.25dp"
+            android:layout_below="@id/header_recyclerview"
+            android:background="@color/indigo_700"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
+        android:background="@android:color/white"
+        android:layout_marginTop="2dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4">
+        android:layout_weight="6"
+        android:elevation="1dp"
+        android:orientation="vertical">
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:text="Current Inning" />
-    </RelativeLayout>
+            android:text="press me"
+            android:onClick="setFocus" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Current Inning"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            android:textAllCaps="true"
+            android:textColor="@color/black"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:background="@color/indigo_200" />
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+
+            </RelativeLayout>
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </LinearLayout>
