--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +7,7 @@
     android:orientation="vertical"
     android:padding="1dp"
     android:clipToPadding="false"
-    android:background="@color/grey_200" >
+    android:background="@color/grey_200">
 
     <RelativeLayout
         android:background="@android:color/white"
@@ -24,10 +23,11 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:text="Away"
+            android:textSize="18sp"
             style="@style/scoreboardHeader"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp" />
 
         <TextView
             android:id="@+id/home_textview"
@@ -35,9 +35,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@id/away_textview"
+            android:textSize="18sp"
             android:text="Home"
             style="@style/scoreboardHeader"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginStart="8dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/inning_top_recyclerview"
@@ -46,8 +47,9 @@
             android:layout_toEndOf="@id/away_textview"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@id/away_textview"
-            android:layout_marginStart="16dp"
-            android:overScrollMode="never"/>
+            android:layout_alignBottom="@id/away_textview"
+            android:layout_marginStart="8dp"
+            android:overScrollMode="never" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/inning_bottom_recyclerview"
@@ -56,7 +58,8 @@
             android:layout_alignStart="@id/inning_top_recyclerview"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@id/home_textview"
-            android:overScrollMode="never"/>
+            android:layout_alignBottom="@id/home_textview"
+            android:overScrollMode="never" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/header_recyclerview"
@@ -65,7 +68,7 @@
             android:layout_alignStart="@id/inning_top_recyclerview"
             android:layout_alignParentEnd="true"
             android:layout_above="@id/away_textview"
-            android:overScrollMode="never"/>
+            android:overScrollMode="never" />
 
         <ImageView
             android:id="@+id/logo_imageview"
@@ -76,7 +79,7 @@
             android:layout_toStartOf="@id/header_recyclerview"
             android:src="@drawable/mlb"
             android:layout_marginEnd="4dp"
-            android:layout_marginTop="4dp"/>
+            android:layout_marginTop="4dp" />
 
         <View
             android:layout_width="wrap_content"
@@ -92,15 +95,9 @@
         android:layout_marginTop="2dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="4.5"
         android:elevation="1dp"
         android:orientation="vertical">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="press me"
-            android:onClick="setFocus" />
 
         <TextView
             android:layout_width="match_parent"
@@ -110,11 +107,11 @@
             android:textSize="20sp"
             android:layout_marginTop="8dp"
             android:textAllCaps="true"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <RelativeLayout
                 android:layout_width="0dp"
@@ -122,8 +119,177 @@
                 android:layout_weight="1">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:id="@+id/away_team_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Away"
+                    android:textAllCaps="true" />
+
+                <TextView
+                    android:id="@+id/away_score_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_team_textview"
+                    android:layout_centerHorizontal="true"
+                    android:text="0"
+                    android:textSize="60sp" />
+
+                <TextView
+                    android:id="@+id/away_hits_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_score_textview"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:text="Hits"
+                    android:textAllCaps="true" />
+
+                <TextView
+                    android:id="@+id/away_errors_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_score_textview"
+                    android:layout_alignParentEnd="true"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:text="Errors"
+                    android:textAllCaps="true" />
+
+                <TextView
+                    android:id="@+id/away_hits_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_hits_textview"
+                    android:layout_alignStart="@id/away_hits_textview"
+                    android:layout_alignEnd="@id/away_hits_textview"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/away_errors_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_errors_textview"
+                    android:layout_alignStart="@id/away_errors_textview"
+                    android:layout_alignEnd="@id/away_errors_textview"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/away_strikes_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_errors_value"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/away_outs_textview"
+                    android:gravity="center"
+                    android:paddingTop="16dp"
+                    android:text="Strikes"
+                    android:textAllCaps="true" />
+
+                <TextView
+                    android:id="@+id/away_balls_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_errors_value"
+                    android:layout_alignParentEnd="true"
+                    android:layout_toEndOf="@id/away_outs_textview"
+                    android:gravity="center"
+                    android:paddingTop="16dp"
+                    android:text="Balls"
+                    android:textAllCaps="true" />
+
+                <TextView
+                    android:id="@+id/away_outs_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_errors_value"
+                    android:layout_alignStart="@id/away_team_textview"
+                    android:layout_alignEnd="@id/away_team_textview"
+                    android:gravity="center"
+                    android:paddingTop="16dp"
+                    android:text="Outs"
+                    android:textAllCaps="true" />
+
+                <LinearLayout
+                    android:id="@+id/away_strikes_holder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_strikes_textview"
+                    android:layout_alignStart="@id/away_strikes_textview"
+                    android:layout_alignEnd="@id/away_strikes_textview"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/away_strikes_textview"
+                        android:src="@drawable/ic_baseline_clear_16" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/away_strikes_textview"
+                        android:src="@drawable/ic_baseline_clear_16" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_outs_textview"
+                    android:layout_toStartOf="@id/away_balls_holder"
+                    android:layout_toEndOf="@id/away_strikes_holder"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_clear_16" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_clear_16" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/away_balls_holder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/away_balls_textview"
+                    android:layout_alignStart="@id/away_balls_textview"
+                    android:layout_alignEnd="@id/away_balls_textview"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_clear_16" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_clear_16" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_clear_16" />
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
 
             </RelativeLayout>
@@ -132,15 +298,13 @@
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
                 android:background="@color/indigo_200" />
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-
-            </RelativeLayout>
         </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="press me"
+            android:onClick="setFocus" />
 
 
     </LinearLayout>
