--- a/app/src/main/res/layout/list_item_header.xml
+++ b/app/src/main/res/layout/list_item_header.xml
@@ -7,7 +7,8 @@
         android:id="@+id/inning_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/red_700"
-        android:padding="4dp"/>
+        android:padding="2.5dp"/>
 </LinearLayout>
