--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="indigo_700">#303f9f</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey_200">#eeeeee</color>
+    <color name="grey_500_light">#cfcfcf</color>
 </resources>
