--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,5 +18,6 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/red_700</item>
         <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 </resources>
