--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="dark_blue">#00b7fd</color>
     <color name="light_blue">#01d6ff</color>
     <color name="dark_red">#b81c31</color>
+    <color name="light_yellow">#fff4c9</color>
 </resources>
