--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -17,7 +17,6 @@
             android:layout_width="0dp"
             android:layout_weight="3"
             android:layout_height="match_parent"
-            android:text="This is the first question, populating a lot of text just to test out the layout and all of that cool stuff, you know?  Do you?"
             android:textColor="@color/black"
             android:textSize="@dimen/medium_text"
             android:layout_marginStart="@dimen/normal_margin"
@@ -72,8 +71,10 @@
     <RadioGroup
         android:id="@+id/choices_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_below="@id/lives_container"
+        android:layout_above="@id/score_title_text_view"
+        android:gravity="center_vertical"
         android:paddingStart="@dimen/extra_large_margin"
         android:paddingEnd="@dimen/extra_large_margin"
         android:layout_marginTop="@dimen/normal_margin" >
@@ -82,8 +83,7 @@
             android:id="@+id/choice_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Answer 1"
-            android:layout_marginBottom="@dimen/normal_margin"
+            android:layout_marginBottom="@dimen/large_margin"
             android:textSize="@dimen/large_text"
             android:paddingStart="@dimen/small_margin"
             android:paddingEnd="@dimen/small_margin" />
@@ -92,9 +92,8 @@
             android:id="@+id/choice_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Answer 2"
             android:textSize="@dimen/large_text"
-            android:layout_marginBottom="@dimen/normal_margin"
+            android:layout_marginBottom="@dimen/large_margin"
             android:paddingStart="@dimen/small_margin"
             android:paddingEnd="@dimen/small_margin" />
 
@@ -102,9 +101,8 @@
             android:id="@+id/choice_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Answer 3"
             android:textSize="@dimen/large_text"
-            android:layout_marginBottom="@dimen/normal_margin"
+            android:layout_marginBottom="@dimen/large_margin"
             android:paddingStart="@dimen/small_margin"
             android:paddingEnd="@dimen/small_margin" />
 
@@ -112,21 +110,117 @@
             android:id="@+id/choice_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Answer 4"
             android:textSize="@dimen/large_text"
             android:paddingStart="@dimen/small_margin"
             android:paddingEnd="@dimen/small_margin" />
     </RadioGroup>
 
+    <LinearLayout
+        android:id="@+id/checkbox_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/lives_container"
+        android:layout_above="@id/score_title_text_view"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:paddingStart="@dimen/extra_large_margin"
+        android:paddingEnd="@dimen/extra_large_margin"
+        android:layout_marginTop="@dimen/normal_margin"
+        android:visibility="gone">
+
+        <CheckBox
+            android:id="@+id/checkbox_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/large_margin"
+            android:textSize="@dimen/large_text"
+            android:paddingStart="@dimen/small_margin"
+            android:paddingEnd="@dimen/small_margin"/>
+
+        <CheckBox
+            android:id="@+id/checkbox_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/large_margin"
+            android:textSize="@dimen/large_text"
+            android:paddingStart="@dimen/small_margin"
+            android:paddingEnd="@dimen/small_margin" />
+
+        <CheckBox
+            android:id="@+id/checkbox_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/large_margin"
+            android:textSize="@dimen/large_text"
+            android:paddingStart="@dimen/small_margin"
+            android:paddingEnd="@dimen/small_margin" />
+
+        <CheckBox
+            android:id="@+id/checkbox_4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/large_margin"
+            android:textSize="@dimen/large_text"
+            android:paddingStart="@dimen/small_margin"
+            android:paddingEnd="@dimen/small_margin" />
+
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/bonus_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint"
+        android:layout_below="@id/lives_container"
+        android:layout_marginStart="@dimen/extra_large_margin"
+        android:layout_marginEnd="@dimen/extra_large_margin"
+        android:layout_marginTop="@dimen/extra_large_margin"
+        android:inputType="text"
+        android:imeOptions="actionDone"
+        android:maxLines="1"
+        android:visibility="gone"/>
+
     <TextView
-        android:id="@+id/timer_display"
+        android:id="@+id/score_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10.000"
-        android:layout_below="@id/choices_container"
+        android:layout_above="@id/timer_progressbar"
+        android:textColor="@color/black"
+        android:textSize="@dimen/large_text"
+        android:layout_marginStart="@dimen/large_margin"
+        android:layout_marginEnd="@dimen/large_margin" />
+
+    <TextView
+        android:id="@+id/score_title_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/score_text_view"
+        android:text="@string/score"
+        android:textAllCaps="true"
+        android:layout_marginStart="@dimen/large_margin"
+        android:layout_marginEnd="@dimen/large_margin"
+        android:layout_marginTop="@dimen/normal_margin" />
+
+
+    <TextView
+        android:id="@+id/timer_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/timer_progressbar"
         android:layout_alignParentEnd="true"
         android:textColor="@color/black"
         android:textSize="@dimen/large_text"
+        android:layout_marginStart="@dimen/large_margin"
+        android:layout_marginEnd="@dimen/large_margin" />
+
+    <TextView
+        android:id="@+id/timer_title_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/score_text_view"
+        android:text="@string/time_left"
+        android:textAllCaps="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/large_margin"
         android:layout_marginEnd="@dimen/large_margin"
         android:layout_marginTop="@dimen/normal_margin" />
@@ -136,21 +230,23 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/timer_display"
+        android:layout_above="@id/submit_button"
         android:progressTint="@color/dark_red"
-        android:max="10"
-        android:progress="10"
+        android:max="7000"
+        android:progress="7000"
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_marginEnd="@dimen/normal_margin" />
 
     <Button
+        android:id="@+id/submit_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/timer_progressbar"
         android:layout_centerHorizontal="true"
         android:text="submit"
         android:layout_marginStart="@dimen/extra_large_margin"
         android:layout_marginEnd="@dimen/extra_large_margin"
-        android:layout_marginTop="@dimen/normal_margin"/>
+        android:layout_marginTop="@dimen/normal_margin"
+        android:layout_marginBottom="@dimen/normal_margin"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
