--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey_500_light">#cfcfcf</color>
 
     <color name="dark_pink">#ff3caf</color>
     <color name="orange">#ff7440</color>
