--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WhoWantsToBeAMirannaire" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
+    <style name="Theme.WhoWantsToBeAMirannaire" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/red_500</item>
+        <item name="colorPrimary">@color/dark_blue</item>
         <item name="colorPrimaryVariant">@color/red_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -13,16 +13,5 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowFullscreen">true</item>
-        <!-- enable window content transitions -->
-<!--        <item name="android:windowActivityTransitions">true</item>-->
-
-<!--        &lt;!&ndash; specify enter and exit transitions &ndash;&gt;-->
-<!--        <item name="android:windowEnterTransition">@android:transition/slide_bottom</item>-->
-<!--        <item name="android:windowExitTransition">@android:transition/explode</item>-->
-
-<!--        &lt;!&ndash; specify shared element transitions &ndash;&gt;-->
-<!--        <item name="android:windowSharedElementEnterTransition">@transition/change_image_transform</item>-->
-<!--        <item name="android:windowSharedElementExitTransition">-->
-<!--            @transition/change_image_transform</item>-->
     </style>
 </resources>
